Avoid weird wraping

--- a/src/components/v2/Pages/Pages.css
+++ b/src/components/v2/Pages/Pages.css
@@ -85,7 +85,7 @@
 @media screen and (min-width: 780px) {
   .country-list-div{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
 }
 
